--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+body {
+  font-family: 'Oswald', sans-serif;
+  background-color: whitesmoke;
+  color: black;
+}
+
+h2  {
+  text-align: center;
+   margin-bottom: 0.5em;
+}
+
 .cards-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Inicialmente, 2 colunas */
@@ -13,12 +24,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid black;
   }
   
   .card-img {
     width: 100%;
     object-fit: cover;
+    border-radius: 100%;
+    transition: transform 1s ease;
+    box-shadow: 5px 5px 5px #333;
+    border: 5px solid white;
+  }
+  .card-img:hover{
+    transform: rotateY(720deg);
   }
   
   .card-title {
