--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h2  {
 
 .cards-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Inicialmente, 2 colunas */
+    grid-template-columns: repeat(2, 1fr); 
     gap: 0.5em;
     max-width: 1200px;
     margin: 0px auto;
@@ -110,14 +110,12 @@ h2  {
   }
 
   @media screen and (min-width: 768px) {
-    /* Em telas maiores que 768px, 4 colunas */
     .cards-container {
       grid-template-columns: repeat(4, 1fr);
     }
   }
   
   @media screen and (min-width: 1024px) {
-    /* Em telas maiores que 1024px, 6 colunas */
     .cards-container {
       grid-template-columns: repeat(6, 1fr);
     }
